CLOUD-56645 Pass JVM args to bootRun